Revert "fix(#535): stabilize viewport width when scrollbars appear or disappe…"
This reverts commit 316d001be86306329aeb8f5d3eef47e7c19f5b2f.

--- a/src/webapp/src/styles.css
+++ b/src/webapp/src/styles.css
@@ -13,10 +13,6 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-html {
-	scrollbar-gutter: stable;
-}
-
 code {
 	font-family:
 		source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
